[Add] Support for java16 (with warning) [Add] MutableURLClassLoader (avoid reflect to addURL)